--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 :root {
   --dark-purple: #100633;
   --purple: #1f0b6b;
